experimental/parser/testdata/lexer/punct.proto.stderr.txt
error: unrecongnized token
  --> testdata/lexer/punct.proto:2:1
   | 
 2 | ! @ # $ % ^ & * + _
   | ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:3
   | 
 2 | ! @ # $ % ^ & * + _
   |   ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:5
   | 
 2 | ! @ # $ % ^ & * + _
   |     ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:7
   | 
 2 | ! @ # $ % ^ & * + _
   |       ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:9
   | 
 2 | ! @ # $ % ^ & * + _
   |         ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:11
   | 
 2 | ! @ # $ % ^ & * + _
   |           ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:13
   | 
 2 | ! @ # $ % ^ & * + _
   |             ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:15
   | 
 2 | ! @ # $ % ^ & * + _
   |               ^ 

error: unrecongnized token
  --> testdata/lexer/punct.proto:2:17
   | 
 2 | ! @ # $ % ^ & * + _
   |                 ^ 

encountered 9 errors
